--- a/table_list.ipynb
+++ b/table_list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "\n",
     "    tables = pd.DataFrame(tables_raw)\n",
     "    tables.columns = ['list']\n",
-    "    cleaned_tables = pd.DataFrame(tables['list'].apply(list).to_list(), columns = ['DATABASE','SCHEMA','NAME','TYPE','SELF_REFERENCING_COL_NAME'])\n",
+    "    cleaned_tables = pd.DataFrame(tables['list'].apply(list).to_list(), columns = ['DATABASE_NAME','SCHEMA','NAME','TYPE','SELF_REFERENCING_COL_NAME'])\n",
     "    cleaned_tables['db'] = database_name\n",
     "\n",
     "    return cleaned_tables"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,200 +107,22 @@
     "    table = get_database_tables(database, connection_args)\n",
     "    table = table.loc[table.loc[:,\"SCHEMA\"] == database_schema.upper(), :]\n",
     "\n",
-    "    oracle_tables.append(table)\n"
+    "    oracle_tables.append(table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DATABASE</th>\n",
-       "      <th>SCHEMA</th>\n",
-       "      <th>NAME</th>\n",
-       "      <th>TYPE</th>\n",
-       "      <th>SELF_REFERENCING_COL_NAME</th>\n",
-       "      <th>db</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>V8_NEWYORK_NY_TEST_LIVE_NOV2024</td>\n",
-       "      <td>COMMON</td>\n",
-       "      <td>ACCOUNT_AUTO_GEN_SEQUENCE</td>\n",
-       "      <td>TABLE</td>\n",
-       "      <td>None</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>V8_NEWYORK_NY_TEST_LIVE_NOV2024</td>\n",
-       "      <td>COMMON</td>\n",
-       "      <td>AKA_NAME</td>\n",
-       "      <td>TABLE</td>\n",
-       "      <td>None</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>V8_NEWYORK_NY_TEST_LIVE_NOV2024</td>\n",
-       "      <td>COMMON</td>\n",
-       "      <td>AKA_NAME_OWNERS</td>\n",
-       "      <td>TABLE</td>\n",
-       "      <td>None</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>V8_NEWYORK_NY_TEST_LIVE_NOV2024</td>\n",
-       "      <td>COMMON</td>\n",
-       "      <td>AOM_TO_OWNER_MAP</td>\n",
-       "      <td>TABLE</td>\n",
-       "      <td>None</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>V8_NEWYORK_NY_TEST_LIVE_NOV2024</td>\n",
-       "      <td>COMMON</td>\n",
-       "      <td>APPLICATIONCONFIG</td>\n",
-       "      <td>TABLE</td>\n",
-       "      <td>None</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4545</th>\n",
-       "      <td>V8_NEWYORK_NY_TEST_LIVE_NOV2024</td>\n",
-       "      <td>sys</td>\n",
-       "      <td>xml_schema_model_groups</td>\n",
-       "      <td>VIEW</td>\n",
-       "      <td>None</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4546</th>\n",
-       "      <td>V8_NEWYORK_NY_TEST_LIVE_NOV2024</td>\n",
-       "      <td>sys</td>\n",
-       "      <td>xml_schema_namespaces</td>\n",
-       "      <td>VIEW</td>\n",
-       "      <td>None</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4547</th>\n",
-       "      <td>V8_NEWYORK_NY_TEST_LIVE_NOV2024</td>\n",
-       "      <td>sys</td>\n",
-       "      <td>xml_schema_types</td>\n",
-       "      <td>VIEW</td>\n",
-       "      <td>None</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4548</th>\n",
-       "      <td>V8_NEWYORK_NY_TEST_LIVE_NOV2024</td>\n",
-       "      <td>sys</td>\n",
-       "      <td>xml_schema_wildcard_namespaces</td>\n",
-       "      <td>VIEW</td>\n",
-       "      <td>None</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4549</th>\n",
-       "      <td>V8_NEWYORK_NY_TEST_LIVE_NOV2024</td>\n",
-       "      <td>sys</td>\n",
-       "      <td>xml_schema_wildcards</td>\n",
-       "      <td>VIEW</td>\n",
-       "      <td>None</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4550 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                             DATABASE  SCHEMA                            NAME  \\\n",
-       "0     V8_NEWYORK_NY_TEST_LIVE_NOV2024  COMMON       ACCOUNT_AUTO_GEN_SEQUENCE   \n",
-       "1     V8_NEWYORK_NY_TEST_LIVE_NOV2024  COMMON                        AKA_NAME   \n",
-       "2     V8_NEWYORK_NY_TEST_LIVE_NOV2024  COMMON                 AKA_NAME_OWNERS   \n",
-       "3     V8_NEWYORK_NY_TEST_LIVE_NOV2024  COMMON                AOM_TO_OWNER_MAP   \n",
-       "4     V8_NEWYORK_NY_TEST_LIVE_NOV2024  COMMON               APPLICATIONCONFIG   \n",
-       "...                               ...     ...                             ...   \n",
-       "4545  V8_NEWYORK_NY_TEST_LIVE_NOV2024     sys         xml_schema_model_groups   \n",
-       "4546  V8_NEWYORK_NY_TEST_LIVE_NOV2024     sys           xml_schema_namespaces   \n",
-       "4547  V8_NEWYORK_NY_TEST_LIVE_NOV2024     sys                xml_schema_types   \n",
-       "4548  V8_NEWYORK_NY_TEST_LIVE_NOV2024     sys  xml_schema_wildcard_namespaces   \n",
-       "4549  V8_NEWYORK_NY_TEST_LIVE_NOV2024     sys            xml_schema_wildcards   \n",
-       "\n",
-       "       TYPE SELF_REFERENCING_COL_NAME    db  \n",
-       "0     TABLE                      None  test  \n",
-       "1     TABLE                      None  test  \n",
-       "2     TABLE                      None  test  \n",
-       "3     TABLE                      None  test  \n",
-       "4     TABLE                      None  test  \n",
-       "...     ...                       ...   ...  \n",
-       "4545   VIEW                      None  test  \n",
-       "4546   VIEW                      None  test  \n",
-       "4547   VIEW                      None  test  \n",
-       "4548   VIEW                      None  test  \n",
-       "4549   VIEW                      None  test  \n",
-       "\n",
-       "[4550 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sql_tables[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flat = [table for tables in [sql_tables,oracle_tables] for table in tables]\n",
+    "flat = [table for tables in [sql_tables, oracle_tables] for table in tables]\n",
     "all_tables = pd.concat(flat, axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -349,19 +171,19 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>ias</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6471</td>\n",
+       "      <td>6471</td>\n",
+       "      <td>6471</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>production</th>\n",
        "      <td>4684</td>\n",
        "      <td>4684</td>\n",
        "      <td>4684</td>\n",
        "      <td>4684</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pts</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6462</td>\n",
-       "      <td>6462</td>\n",
-       "      <td>6462</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -388,19 +210,32 @@
        "            DATABASE  SCHEMA  NAME  TYPE  SELF_REFERENCING_COL_NAME\n",
        "db                                                                 \n",
        "fdw                0     228   228   228                          0\n",
+       "ias                0    6471  6471  6471                          0\n",
        "production      4684    4684  4684  4684                          0\n",
-       "pts                0    6462  6462  6462                          0\n",
        "sandbox         4265    4265  4265  4265                          0\n",
        "test            4550    4550  4550  4550                          0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "all_tables.groupby(\"db\").count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_tables.drop(columns=[\"SELF_REFERENCING_COL_NAME\"])\n",
+    "\n",
+    "all_tables = all_tables \n",
+    "\n",
+    "all_tables.to_csv(\"data_dictionary_table_data.csv\")"
    ]
   },
   {
@@ -420,72 +255,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[ANO_MNC, numeric]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[ANO_AKA_ID, bigint]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[ANO_OWNER_ID, numeric]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[ANO_CREATE_DATE, datetime]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[ANO_LAST_UPDATE, datetime]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                             0\n",
-       "0           [ANO_MNC, numeric]\n",
-       "1         [ANO_AKA_ID, bigint]\n",
-       "2      [ANO_OWNER_ID, numeric]\n",
-       "3  [ANO_CREATE_DATE, datetime]\n",
-       "4  [ANO_LAST_UPDATE, datetime]"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "database= \"test\"\n",
     "\n",
@@ -520,7 +292,79 @@
     "    return columns_info\n",
     "\n",
     "\n",
-    "get_columns_from_table(cursor, \"AKA_NAME_OWNERS\")"
+    "obj = get_columns_from_table(cursor, \"PARCEL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[PRC_MNC, numeric]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[PRC_PID, numeric]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[PRC_ASSNG_DIST, varchar]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[PRC_ASSNG_SUBDIST, varchar]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[PRC_RES_DIST, varchar]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              0\n",
+       "0            [PRC_MNC, numeric]\n",
+       "1            [PRC_PID, numeric]\n",
+       "2     [PRC_ASSNG_DIST, varchar]\n",
+       "3  [PRC_ASSNG_SUBDIST, varchar]\n",
+       "4       [PRC_RES_DIST, varchar]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.head()"
    ]
   }
  ],
