--- a/table_list.ipynb
+++ b/table_list.ipynb
@@ -22,15 +22,8 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
-    "load_dotenv(find_dotenv(\"C:/Users/BoydClaire/.Renviron\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "load_dotenv(find_dotenv(\"C:/Users/BoydClaire/.Renviron\"))\n",
+    "\n",
     "def get_database_tables(database_name, connection_args, schema=None):\n",
     "\n",
     "    connection_string = \"\".join(connection_args)\n",
@@ -48,20 +41,20 @@
     "    tables = pd.DataFrame(tables_raw)\n",
     "    tables.columns = ['list']\n",
     "    cleaned_tables = pd.DataFrame(tables['list'].apply(list).to_list(), columns = ['DATABASE_NAME','SCHEMA','NAME','TYPE','SELF_REFERENCING_COL_NAME'])\n",
-    "    cleaned_tables['db'] = database_name\n",
+    "    cleaned_tables['DATABASE'] = database_name\n",
     "\n",
     "    return cleaned_tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get sql tables\n",
     "\n",
-    "sql_database_list = [\"production\", \"test\", \"sandbox\"]\n",
+    "sql_database_list = [\"production\"]\n",
     "sql_tables = []\n",
     "\n",
     "for database in sql_database_list:\n",
@@ -82,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -146,14 +139,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>DATABASE</th>\n",
+       "      <th>DATABASE_NAME</th>\n",
        "      <th>SCHEMA</th>\n",
        "      <th>NAME</th>\n",
        "      <th>TYPE</th>\n",
        "      <th>SELF_REFERENCING_COL_NAME</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>db</th>\n",
+       "      <th>DATABASE</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -173,9 +166,9 @@
        "    <tr>\n",
        "      <th>ias</th>\n",
        "      <td>0</td>\n",
-       "      <td>6471</td>\n",
-       "      <td>6471</td>\n",
-       "      <td>6471</td>\n",
+       "      <td>6470</td>\n",
+       "      <td>6470</td>\n",
+       "      <td>6470</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -186,20 +179,122 @@
        "      <td>4684</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            DATABASE_NAME  SCHEMA  NAME  TYPE  SELF_REFERENCING_COL_NAME\n",
+       "DATABASE                                                                \n",
+       "fdw                     0     228   228   228                          0\n",
+       "ias                     0    6470  6470  6470                          0\n",
+       "production           4684    4684  4684  4684                          0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_tables.groupby(\"DATABASE\").count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         True\n",
+       "1         True\n",
+       "2         True\n",
+       "3         True\n",
+       "4         True\n",
+       "         ...  \n",
+       "29820    False\n",
+       "29821    False\n",
+       "29822    False\n",
+       "29823    False\n",
+       "29824    False\n",
+       "Name: DATABASE, Length: 11382, dtype: bool"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_tables['DATABASE'] == \"production\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATABASE_NAME</th>\n",
+       "      <th>SCHEMA</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>TYPE</th>\n",
+       "      <th>SELF_REFERENCING_COL_NAME</th>\n",
+       "    </tr>\n",
        "    <tr>\n",
-       "      <th>sandbox</th>\n",
-       "      <td>4265</td>\n",
-       "      <td>4265</td>\n",
-       "      <td>4265</td>\n",
-       "      <td>4265</td>\n",
+       "      <th>DATABASE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>fdw</th>\n",
+       "      <td>0</td>\n",
+       "      <td>228</td>\n",
+       "      <td>228</td>\n",
+       "      <td>228</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>test</th>\n",
-       "      <td>4550</td>\n",
-       "      <td>4550</td>\n",
-       "      <td>4550</td>\n",
-       "      <td>4550</td>\n",
+       "      <th>ias</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6154</td>\n",
+       "      <td>6154</td>\n",
+       "      <td>6154</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>production</th>\n",
+       "      <td>2407</td>\n",
+       "      <td>2407</td>\n",
+       "      <td>2407</td>\n",
+       "      <td>2407</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -207,35 +302,24 @@
        "</div>"
       ],
       "text/plain": [
-       "            DATABASE  SCHEMA  NAME  TYPE  SELF_REFERENCING_COL_NAME\n",
-       "db                                                                 \n",
-       "fdw                0     228   228   228                          0\n",
-       "ias                0    6471  6471  6471                          0\n",
-       "production      4684    4684  4684  4684                          0\n",
-       "sandbox         4265    4265  4265  4265                          0\n",
-       "test            4550    4550  4550  4550                          0"
+       "            DATABASE_NAME  SCHEMA  NAME  TYPE  SELF_REFERENCING_COL_NAME\n",
+       "DATABASE                                                                \n",
+       "fdw                     0     228   228   228                          0\n",
+       "ias                     0    6154  6154  6154                          0\n",
+       "production           2407    2407  2407  2407                          0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_tables.groupby(\"db\").count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_tables.drop(columns=[\"SELF_REFERENCING_COL_NAME\"])\n",
+    "# filter tables \n",
     "\n",
-    "all_tables = all_tables \n",
+    "display_tables = all_tables.loc[(~all_tables['NAME'].str.contains('_20[0-9]{2}')),:]\n",
     "\n",
-    "all_tables.to_csv(\"data_dictionary_table_data.csv\")"
+    "display_tables.groupby(\"DATABASE\").count()"
    ]
   },
   {
@@ -243,11 +327,7 @@
    "metadata": {},
    "source": [
     "things to consider:\n",
-    "* repeats of the same data\n",
-    "* how often records get updated\n",
-    "* mirrored tables in different databases\n",
-    "* \n",
-    "\n",
+    "* how often records get updated -- last update\n",
     "\n",
     "how to pull in cols for all databases based on the tables above\n",
     "*"
@@ -255,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,8 +356,15 @@
     "# create connection object\n",
     "cnxn = pyodbc.connect(connection_string)\n",
     "\n",
-    "cursor = cnxn.cursor()\n",
-    "\n",
+    "cursor = cnxn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_columns_from_table(cursor, tablename):\n",
     "    \n",
     "    cursor.execute(f\"\"\"\n",
@@ -289,82 +376,38 @@
     "    # Fetch all results\n",
     "    columns_info = pd.DataFrame(cursor.fetchall())\n",
     "\n",
+    "    columns_info.columns = ['list']\n",
+    "    columns_info = pd.DataFrame(columns_info['list'].apply(list).to_list(), columns = ['COLUMN_NAME','TYPE'])\n",
+    "\n",
     "    return columns_info\n",
     "\n",
     "\n",
-    "obj = get_columns_from_table(cursor, \"PARCEL\")"
+    "def get_prefix_from_table(cursor, tablename):\n",
+    "\n",
+    "    columns_info = get_columns_from_table(cursor, tablename)\n",
+    "    prefix = columns_info['COLUMN_NAME'].str.extract(\"^(.*?)_.*$\")[0][0]\n",
+    "    \n",
+    "    return prefix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[PRC_MNC, numeric]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[PRC_PID, numeric]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[PRC_ASSNG_DIST, varchar]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[PRC_ASSNG_SUBDIST, varchar]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[PRC_RES_DIST, varchar]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                              0\n",
-       "0            [PRC_MNC, numeric]\n",
-       "1            [PRC_PID, numeric]\n",
-       "2     [PRC_ASSNG_DIST, varchar]\n",
-       "3  [PRC_ASSNG_SUBDIST, varchar]\n",
-       "4       [PRC_RES_DIST, varchar]"
+       "'BLD'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obj.head()"
+    "get_prefix_from_table(cursor, \"BLDG\")\n"
    ]
   }
  ],
